<resources>
    <string name="app_name">AndroidAPI</string>
    <string name="loginmsg">Welcome to AndroidAPI</string>
    <string name="Login">Login</string>
    <string name="Show_users">Show all users</string>
    <string name="SwitchAPIDataSourceBtn">Switch to API</string>
    <string name="SwitchDBDataSourceBtn">Switch to Default</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="setDBDataSourceBtnText">Reset DB to this data</string>
</resources>