<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/base_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/LoginMsg"
            android:layout_marginBottom="@dimen/welcomeTextFieldMarginBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loginmsg"
            android:textSize="@dimen/textSizeBig"
            android:textColor="@color/colorBlack"
            />

        <EditText
            android:id="@+id/UsernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/PasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="LabelFor"/>

        <Button
            android:id="@+id/LoginBtn"
            android:text="@string/Login"
            android:layout_margin="@dimen/btnMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>

        <Button
            android:id="@+id/ShowUsersBtn"
            android:text="@string/Show_users"
            android:layout_margin="@dimen/btnMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

    </LinearLayout>
</LinearLayout>